--- a/css/main.css
+++ b/css/main.css
@@ -8,7 +8,7 @@
 }
 
 div.cv-avatar{
-    background-image: url("../img/me.png");
+    background-image: url("../img/me2.jpg");
     background-size: contain;
     background-position: center;
     background-repeat: no-repeat;
